[package]
name = "tree-sitter-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tree_sitter_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.15.0", features = ["abi3-py36", "extension-module"] }
tree-sitter = "0.20.0"
tree-sitter-python = "0.19.1"
